--- a/main.css
+++ b/main.css
@@ -84,3 +84,10 @@ h3 {
   margin-bottom: 12px;
   color: black;
 }
+
+footer {
+  background: #333232;
+  text-align: center;
+  color: white;
+  padding: 30px;
+}
