--- a/main.css
+++ b/main.css
@@ -102,7 +102,7 @@ footer {
   width: 100%;
   display: flex;
   justify-content: center;
-  margin-bottom: 100px;
+  margin-top: 100px;
   margin-bottom: 100px;
 }
 
